style.css
/* header section line 28 */
/* intro section line 77 */
/* button section line 112 */
/* about section line 154 */
/* know section line 179 */
/* share section line 198 */
/* social section line 215 */
/* contact section line 259 */
/* footer section line 276 */
/* conduct page line 318 */
/* terms of service page 342 */
/* privacy page 361 */
/* get involved page 384 */
/* volunteer page 465 */
/*  */
/*  */
/*  */
/*  */
/*  */
/*  */
/*  */

body {
    background: rgba(75, 0, 255, 0.96);
    font-family: 'Roboto', sans-serif;
}

/* header section */

header {
    height: 5rem;
    width: 100%;
    position: fixed;
    display: inline-flex;
    align-items: center;
    z-index: 2;
    background: white;
    overflow: hidden;
    top: 0;
    left: 0;
    right: 0;
    border-bottom: black 1px solid;
}

.logo-container {
    margin: 1rem;
}

.header-img {
    height: auto;
    width: 3rem;
}

.nav-menu {
    align-items: center;
    margin: 0 auto;
    position: relative;
    right: 1rem;
}

.nav-item {
    list-style-type: none;
    display: inline-flex;
}

.nav-btn {
    margin: 2rem;
    text-decoration: none;
    font-size: 1.5rem;
    color: black;
}

.nav-btn:hover {
    color: rgba(75, 0, 255, 0.96);
}

/* intro section */

.intro {
    position: relative;
    top: 8rem;
    background: white;
    margin: 0 auto;
    width: 90%;
    height: 23rem;
}


.company-name {
    padding-top: .5rem;
    padding-left: 3rem;
    padding-bottom: 1rem;
}

h2 {
    font-size: 2.75rem;
    text-decoration: underline;
}

h1 {
    font-size: 4.25rem;
    color: rgba(75, 0, 255, 0.96);
}

.intro-img {
    position: absolute;
    right: 3rem;
    top: 4rem;
    height: 250px;
}

/* button */

.btn {
    -webkit-border-radius: 1rem;
    -moz-border-radius: 1rem;
    border-radius: 1rem;
    color: #004BFF;
    font-size: 1.25rem;
    font-weight: 200;
    padding: 1rem;
    background-color: #E5E8EA;
    border: solid #004BFF 1px;
    text-decoration: none;
    display: inline-block;
    cursor: pointer;
    text-align: center;
 }

 .btn:hover {
     background-color: #bbc3c8
 }

 .dark-btn {
    -webkit-border-radius: 1rem;
    -moz-border-radius: 1rem;
    border-radius: 1rem;
    color: #E5E8EA;
    font-size: 1.25rem;
    font-weight: 200;
    padding:1rem;
    background-color: #3c00e6;
    border: solid #004BFF 1px;
    text-decoration: none;
    display: inline-block;
    cursor: pointer;
    text-align: center;
 }

 .dark-btn:hover {
     background-color: #7c4dff;
 }

/* About section */

.about {
    margin-top: 6rem;
    background: white;
    padding-top: .5rem;
    padding-bottom: 1rem;
    position: relative;
    right: 3rem;
    background: white;
    padding-left: 3rem;
    width: 100%;
}

h3 {
    color: rgba(75, 0, 255, 0.96);
    font-size: 1.5rem;
}

iframe {
    margin: 0 auto;
    padding-bottom: 2rem;
    padding-top: 2rem;
}
 
 /* know section */

.know {
    margin-top: 3rem;
    padding-top: .5rem;
    padding-bottom: 2rem;
    position: relative;
    right: 3rem;
    background: white;
    padding-left: 3rem;
    width: 100%;
}

p {
    font-size: 1.25rem;
    font-weight: 400;
    width: 95%;
}

/* share section  */

.share {
    margin-top: 3rem;
    padding-top: .5rem;
    padding-bottom: 2rem;
    position: relative;
    right: 3rem;
    background: white;
    padding-left: 3rem;
    width: 100%;
}

h4 {
    font-size: 1.5rem;
}

/* social section */

.social {
    margin-top: 3rem;
    padding-top: .5rem;
    padding-bottom: 3rem;
    position: relative;
    right: 3rem;
    background: white;
    padding-left: 3rem;
    width: 100%; 
}

.social-site-container {
    text-align: center;
}

.social-site {
    display: inline-flex;
    justify-content: space-between;
}

.social-grid-container {
    text-align: center;
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: 1fr;
    gap: 0px 0px;
    grid-template-areas:
      "facebook instagram twitter";
}
  
.facebook { 
    grid-area: facebook; 
}
  
.instagram { 
    grid-area: instagram; 
}
  
.twitter { 
    grid-area: twitter; 
}

/* contact section */

.contact {
    margin-top: 3rem;
    padding-top: .5rem;
    padding-bottom: 3rem;
    position: relative;
    right: 3rem;
    background: white;
    padding-left: 3rem;
    width: 100%;
}

#email {
    text-align: center;
}

/* footer section */

.footer {
    position: absolute;
    width: 100%;
    color: white;
    text-align: center;
}

.footer-list-item {
    color: white;
    text-decoration: none;
}

.footer-btn {
    text-decoration: none;
}

.footer-grid-container {
    list-style-type: none;
    text-decoration: none;
    text-align: center;
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: 1fr;
    gap: 0px 0px;
    grid-template-areas:
      "code-conduct term-service privacy-policy";
}
  
.code-conduct { 
    grid-area: code-conduct; 
}
  
.term-service {
    grid-area: term-service; 
}
  
.privacy-policy { 
    grid-area: privacy-policy; 
}
  
/* conduct page */

.conduct-page {
    margin-top: 8rem;
    margin-left: 3rem;
    margin-right: 3rem;
    background: white;
    padding-left: 3rem;
    padding-top: .5rem;
    padding-bottom: 2rem;
}

.conduct-list-item {
    width: 90%;
    padding-top: 1rem;
}

.conduct-section {
    border: black solid 3px;
    margin-right: 3rem;
    padding-left: 3rem;
    padding-bottom: 1rem;
}

/* terms page */

.service {
    margin-top: 8rem;
    margin-left: 3rem;
    margin-right: 3rem;
    background: white;
    padding-left: 3rem;
    padding-top: .5rem;
    padding-bottom: 2rem;
}

.terms-list {
    border: black solid 3px;
    margin-right: 3rem;
    padding-top: 3rem;
    padding-bottom: 1rem;
}

/* privacy page */

.privacy {
    margin-top: 8rem;
    margin-left: 3rem;
    margin-right: 3rem;
    background: white;
    padding-left: 3rem;
    padding-top: .5rem;
    padding-bottom: 2rem;
}

.wide {
    width: 90%;
}

.privacy-list {
    border: black solid 3px;
    margin-right: 3rem;
    padding-top: 2rem;
    padding-bottom: 1rem;
}

/* Get involved page */

.involved {
    margin-top: 8rem;
    margin-left: 3rem;
    margin-right: 3rem;
    background: white;
    padding-left: 3rem;
    padding-top: .5rem;
    padding-bottom: 2rem;
}

.mission {
    margin-top: 3rem;
    margin-left: 3rem;
    margin-right: 3rem;
    background: white;
    padding-left: 3rem;
    padding-top: .5rem;
    padding-bottom: 2rem;
}

.needs {
    margin-top: 3rem;
    margin-left: 3rem;
    margin-right: 3rem;
    background: white;
    padding-left: 3rem;
    padding-top: .5rem;
    padding-bottom: 2rem;
}

.list-container {
    display: flex;
    margin: 0 auto;
    margin-left: 0;
    width: 90%
}

.skill-list {
    margin: 0 auto;
}

.social-site-container {
    margin: 0 auto;
    justify-content: center;
    display: inline-flex;
}

#get-involved-social {
    margin-top: 3rem;
    margin-left: 3rem;
    margin-right: 3rem;
    background: white;
    padding-left: 3rem;
    padding-top: .5rem;
    padding-bottom: 2rem;
}

.get-involved-social-grid-container {
    text-align: center;
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: 1fr;
    gap: 0px 0px;
    grid-template-areas:
      "facebook instagram twitter";
}
  
.get-involved-facebook { 
    grid-area: facebook; 
}
  
.get-involved-instagram { 
    grid-area: instagram; 
}
  
.get-involved-twitter { 
    grid-area: twitter; 
}

/* volunteer page */

.volunteer { 
    margin-top: 8rem;
    margin-left: 3rem;
    margin-right: 3rem;
    background: white;
    padding-left: 3rem;
    padding-top: .5rem;
    padding-bottom: 2rem;
}

.volunteer-form {
    
    padding-top: 3rem;
   
    margin-right: 3rem;
    text-align: center;
    border: solid black 3px;
}

.volunteer-form input:focus, .form-line-active textarea:focus, .form-line-active select:focus {

    border: 1px solid rgba(75, 0, 255, 0.96) !important;
    
    box-shadow: 0 0 3px rgba(75, 0, 255, 0.96) !important;
    
    -moz-box-shadow: 0 0 3px rgba(75, 0, 255, 0.96) !important;
    
    -webkit-box-shadow: 0 0 3px rgba(75, 0, 255, 0.96) !important;
    
}
    
input:focus, textarea:focus, select:focus {
    
    outline-offset: 0px !important;
    
    outline: none !important;
    
}
    
.volunteer-label {
    margin-bottom: 5rem;
}

.volunteer-description {
    margin-bottom: 3rem;
}

.form-input {
    font-size: 1.25rem;
    margin: 1.5rem;
    width: 50%;
    height: 2rem;
    margin-bottom: 2rem;
    border-radius: .25rem;
}

.state-input {
    margin: 1.5rem;
    width: 31%;
    height: 2rem;
    font-size: 1.25rem;
    
}

.textarea {
    width: 50%;
    height: 3rem;
    margin-bottom: 2rem;
    overflow: auto;
}

.form-label {
    font-size: 1.5rem;
}

#available {
    width: 30%;
    height: 2rem;
    font-size: 1.25rem;
}

.fine-print {
    font-size: .5rem;
    margin: 0 auto;
    padding-top: .5rem;
    padding-bottom: 2rem;
}

.checkbox-container {
    display: flex;
    text-align: center;
    padding: .25rem;
}

.checkbox-container-container {
    width: 15%;
    margin: 0 auto;
    padding-top: 1rem;
    padding-bottom: 1rem;
    
}

.checkbox-label {
    padding-left: 1rem;
   
}

.attachment {
    width: 60%;
    margin: 0 auto;
    border: dashed .25rem rgba(75, 0, 255, 0.96);
    background-color: lightgray;
    padding-top: 2rem;
}

#code {
    height: 1rem;
    width: 1rem;
}

#code-checkbox {
    padding-bottom: 2rem;
}

#form-submit {
    padding-bottom: 2rem;
}

